# WeatherAPI

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_weatherdata_timestamp.py
dashboard/: urls.py  views.py
templates/dashboard/: index.html
weather_dashboard/: asgi.py  celery_config.py  settings.py  urls.py  wsgi.py
weather_dashboard/management/commands/: fetch_weather.py  wait_for_db.py
